styles.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

* {
    left: 0;
    top:0;
    margin: 0;
    box-sizing: border-box;
}

body{
    font-family: "Roboto", sans-serif;
    
}

.header-section{
    background-color: #1F2937;
}

.navbar{
    position: sticky;
    top: 0;
    z-index: 999;
    margin-left: auto;
    margin-right: auto;
    max-width: 1320px;
    background-color: #1F2937;
}

.navbar-container{
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 80px;

}

.header-logo {
    color: #f9faf8;
    justify-self: start;
    margin-left: 20px;
    cursor: pointer;
    text-decoration: none;
    font-size: 1.6rem;
    display: flex;
    align-items: center;
    margin-left: 20px;
}
ul{
    display: flex;
    text-decoration: none;
    list-style: none;
}

a{
    text-decoration: none;
    color: #f9faf8;
}


.nav-links {
    color: #f9faf8;
    display: flex;
    align-items: center;
    text-decoration: none;
    padding: 0.5rem 1rem;
    height: 100%;
    margin-right: 20px;
  }
  
.hero-page{
    display: flex;
    margin-left: auto;
    margin-right: auto;
    max-width: 1280px;
    margin-top: 100px;
    background-color: #1F2937;
}
  .hero-mainText{
    font-size: 48px;
    font-weight: 900;
    color: #f9faf8;
  }

  

